fix: event badging form spacing fix

--- a/src/components/ApplyForm/applyform.scss
+++ b/src/components/ApplyForm/applyform.scss
@@ -6,7 +6,6 @@
 .badge_form {
   display: flex;
   flex-direction: column;
-  min-width: 256px;
   height: auto;
   margin-top: 1.5rem;
 
@@ -23,14 +22,13 @@
       color: red;
     }
     input[type='text'] {
-      width: 250px;
+      width: 100%;
       line-height: 40px;
       padding: 13px, 10px, 13px, 10px;
       border: 1px solid #bebebe;
       border-radius: 4px;
       color: black;
       box-sizing: border-box;
-      padding-left: 1rem;
     }
     p.error {
       color: red;
@@ -38,7 +36,6 @@
 
     textarea.input_text {
       resize: both;
-      width: 250px;
       height: 50px;
       line-height: 40px;
       padding: 13px, 10px, 13px, 10px;
@@ -46,12 +43,11 @@
       border-radius: 4px;
       color: black;
       box-sizing: border-box;
-      padding-left: 1rem;
     }
     ::placeholder {
       line-height: 24px;
-      padding-left: 1rem;
       font-family: Theinhardt Pan;
+      padding-left: 1rem;
     }
     .reference {
       margin-top: 0;
@@ -100,7 +96,6 @@
       margin-right: 6px;
     }
     .radio-input input[type='radio'] {
-      width: 230px;
       height: 29px;
       margin-right: 8rem;
     }
@@ -111,7 +106,6 @@
   }
   .submit-button {
     margin-top: 0.5rem;
-    width: 306px;
     height: 60px;
     padding: 8px, 24.1px, 8px, 24.1px;
     border: none;
@@ -128,7 +122,6 @@
       padding-top: 0;
       padding-bottom: 0;
       font-size: 14px;
-      width: 300px;
     }
   }
 
@@ -138,10 +131,6 @@
     background-color: #adcff8;
     padding: 2px 6px;
     font-size: 12px;
-    min-width: 200px;
-    p {
-      // width: 300px;
-    }
   }
 }
 
@@ -149,7 +138,7 @@
   .badge_form {
     display: flex;
     flex-direction: column;
-    width: 576px;
+    width: 80%;
     gap: 32px;
     height: auto;
     min-height: 1000px;
@@ -169,7 +158,6 @@
         color: red;
       }
       input[type='text'] {
-        width: 566px;
         line-height: 40px;
 
         padding: 13px, 16px, 13px, 16px;
@@ -178,7 +166,6 @@
         color: black;
       }
       textarea.input_text {
-        width: 556px;
         height: 100px;
         line-height: 40px;
         padding: 13px, 10px, 13px, 10px;
@@ -188,7 +175,6 @@
       }
       ::placeholder {
         line-height: 24px;
-        padding-left: 1rem;
         font-family: Theinhardt Pan;
       }
       .radio-input {
@@ -210,7 +196,6 @@
         padding-top: 0 !important;
         padding-bottom: 0 !important;
         font-size: 14px;
-        width: 566px;
       }
     }
 
@@ -221,10 +206,6 @@
       padding: 2px 6px;
       margin-bottom: 1.5rem;
       font-size: 14px;
-      width: 550px;
-      p {
-        width: 550px;
-      }
     }
   }
 }
